# bobnet

./: .gitignore  LICENSE  README.md
bobnet/: CMakeLists.txt  package.xml
bobnet/launch/: anymal_c.launch  spot.launch
bobnet/launch/rviz/: anymal_c.rviz  spot.rviz
bobnet/src/: anymal_c_main.cpp  main.cpp
bobnet_config/: CMakeLists.txt  package.xml
bobnet_config/configs/: anymal_c.yaml  spot.yaml
bobnet_config/include/bobnet_config/: utils.h
bobnet_config/launch/: load_config.launch
bobnet_config/src/: utils.cpp
bobnet_control/: CMakeLists.txt  package.xml
bobnet_control/include/bobnet_control/: BobController.h  CentralController.h  CentralPatternGenerator.h  Controller.h  Controllers.h  InverseKinematics.h  JointPID.h  RobotInterface.h  StateSubscriber.h  StaticController.h  Utils.h
bobnet_control/include/bobnet_control/anymal_c/: AnymalCInverseKinematics.h
bobnet_control/models/: anymal_model.pt  pol.pt  spot.pt_jitted.pt  spot_fix.pt  spot_model.pt  spot_pol.pt  spot_pol2.pt  spot_pol22.pt
bobnet_control/src/: BobController.cpp  CentralController.cpp  CentralPatternGenerator.cpp  Controllers.cpp  InverseKinematics.cpp  JointPID.cpp  RobotInterface.cpp  StateSubscriber.cpp  StaticController.cpp  Utils.cpp
bobnet_control/src/anymal_c/: AnymalCInverseKinematics.cpp
bobnet_controllers/: CMakeLists.txt  package.xml
bobnet_controllers/include/bobnet_controllers/: CentralPatternGenerator.h  Controllers.h  InverseKinematics.h  RobotInterface.h  Types.h  Utils.h
bobnet_controllers/include/bobnet_controllers/anymal_c/: AnymalCInfo.h  AnymalCInverseKinematics.h
bobnet_controllers/src/: CentralPatternGenerator.cpp  Controllers.cpp  InverseKinematics.cpp  RobotInterface.cpp  Utils.cpp
bobnet_controllers/src/anymal_c/: AnymalCInverseKinematics.cpp
bobnet_core/: CMakeLists.txt  package.xml
bobnet_core/include/bobnet_core/: State.h  Types.h
bobnet_core/src/: State.cpp
bobnet_descriptions/anymal_description/: CMakeLists.txt  package.xml
bobnet_descriptions/anymal_description/config/rviz/: anymal_rviz.rviz
bobnet_descriptions/anymal_description/launch/: anymal_rviz.launch  load.launch
bobnet_descriptions/anymal_description/urdf/: anymal.urdf
bobnet_descriptions/spot_description/launch/: urdf_viz.launch
bobnet_descriptions/spot_description/launch/rviz/: spot.rviz
bobnet_descriptions/spot_description/urdf/: spot.urdf
bobnet_gazebo/: CMakeLists.txt  controller_plugins.xml  package.xml
bobnet_gazebo/config/: controllers.yaml
bobnet_gazebo/include/bobnet_gazebo/: JointController.h  StateEstimator.h
bobnet_gazebo/launch/: simulation.launch
bobnet_gazebo/launch/worlds/custom/: custom.ply  custom.world
bobnet_gazebo/launch/worlds/step_25cm/: step_25cm.world
bobnet_gazebo/launch/worlds/step_30cm/: step_30cm.world
bobnet_gazebo/src/: JointController.cpp  StateEstimator.cpp
bobnet_gazebo/src/world_gen/: generate_world.py
bobnet_gridmap/: CMakeLists.txt  package.xml
bobnet_gridmap/include/bobnet_gridmap/: GridmapInterface.h  StaticLoader.h
bobnet_gridmap/src/: GridmapInterface.cpp  StaticLoader.cpp  load_map.cpp
bobnet_msgs/: CMakeLists.txt  package.xml
bobnet_reference/: CMakeLists.txt  package.xml
bobnet_reference/include/bobnet_reference/: ReferenceGenerator.h
bobnet_reference/launch/: joystick.launch
bobnet_reference/src/: ReferenceGenerator.cpp
bobnet_visualization/: CMakeLists.txt  package.xml
bobnet_visualization/include/bobnet_visualization/: RvizVisualizer.h  Visualizers.h
bobnet_visualization/include/bobnet_visualization/anymal_c/: AnymalCVisualizer.h
bobnet_visualization/src/: RvizVisualizer.cpp  Visualizers.cpp
bobnet_visualization/src/anymal_c/: AnymalCVisualizer.cpp
