<?xml version="1.0"?>
<package format="2">
  <name>bobnet</name>
  <version>0.0.0</version>
  <description>The bobnet package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>bobnet_control</depend>
  <depend>bobnet_gridmap</depend>
  <depend>bobnet_config</depend>

  <export>
  </export>
</package>
