<?xml version="1.0"?>
<package format="2">
  <name>bobnet_control</name>
  <version>0.0.0</version>
  <description>The bobnet_control package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>bobnet_msgs</depend>
  <depend>bobnet_reference</depend>
  <depend>bobnet_gridmap</depend>
  <depend>bobnet_core</depend>
  <depend>bobnet_visualization</depend>
  <depend>bobnet_config</depend>

  <export>
  </export>
</package>
