<?xml version="1.0"?>
<package format="2">
  <name>bobnet_core</name>
  <version>0.0.0</version>
  <description>The bobnet_core package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>bobnet_msgs</depend>

  <export>
  </export>
</package>
