<?xml version="1.0"?>
<package format="2">
  <name>bobnet_reference</name>
  <version>0.0.0</version>
  <description>The bobnet_reference package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>bobnet_core</depend>
  <depend>bobnet_config</depend>

  <export>
  </export>
</package>
