<?xml version="1.0"?>
<package format="2">
  <name>bobnet_visualization</name>
  <version>0.0.0</version>
  <description>The bobnet_visualization package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>robot_state_publisher</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>bobnet_core</depend>
  <depend>bobnet_config</depend>

  <export>
  </export>
</package>
